Fix long usernames w overflow ellipsis

--- a/assets/stylesheets/common/leaderboard.scss
+++ b/assets/stylesheets/common/leaderboard.scss
@@ -192,7 +192,7 @@
 
     &__rank {
       flex-shrink: 0;
-      width: 3rem;
+      width: 2.5rem;
       font-size: var(--font-up-4);
       font-weight: bold;
     }
@@ -200,6 +200,7 @@
     &__avatar {
       margin: 0 1rem 0 0.5rem;
       overflow: hidden;
+      white-space: nowrap;
       text-overflow: ellipsis;
 
       img {
